X11: Better timestamp handling for _NET_ACTIVE_WINDOW

Main changes introduced:
1. Get the X server timestamp in the newly created browser process and
send it over IPC to the old process to update wm_user_time_ms

2. Add logic in set_wm_user_time_ms to avoid setting the time to 0 (or
backwards)

3. If wm_user_time_ms == 0 and we try to activate a window, grab the
server time first

BUG=593516,608521,379615

Review-Url: https://codereview.chromium.org/1949393007
Cr-Commit-Position: refs/heads/master@{#394018}

Former-commit-id: ca3656dc321be956db788c5fc8ee16cd20ed6d86