chrome/common/chrome_switches.h
@@ -332,6 +332,7 @@ extern const char kOpenAsh[];
 extern const char kHelp[];
 extern const char kHelpShort[];
 extern const char kPasswordStore[];
+extern const char kWmUserTimeMs[];
 #endif
 
 #if defined(OS_MACOSX)
